[package]
name = "gguf_analyzer"
version = "0.1.3"
edition = "2024"
description = "A CLI tool to explore and edit the metadata of GGUF model files"
repository = "https://github.com/mitanuriel/gguf_analyzer"
license = "MIT"

[[bin]]
name = "gguf-analyzer"
path = "src/main.rs"

[lib]
name = "gguf_analyzer"
path = "src/lib.rs"

[dependencies]
# GGUF reading / writing
gguf-rs-lib = { version = "0.2", features = ["mmap"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Error handling
anyhow = "1"
thiserror = "2"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Memory-mapped I/O
memmap2 = "0.9"

# HTTP client (blocking) — for fetch + model-card commands
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Download progress bar
indicatif = "0.17"

# Pretty table output
tabled = "0.17"

# Terminal width detection
terminal_size = "0.4"

# Glob pattern matching for --filter
glob = "0.3"

# Structured, levelled tracing / diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ANSI colour output
colored = "2"

[dev-dependencies]
# Temporary files for integration tests
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
